--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               src="https://img.icons8.com/bubbles/100/000000/gmail.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/Sojosan" target="_blank"><img
+          <a href="https://github.com/siralwin" target="_blank"><img
               src="https://img.icons8.com/bubbles/100/000000/github.png" /></a>
         </div>
       </div>
